--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Akses Legal Indonesia — Sertifikasi Halal, PIRT & BPOM</title>
+    <title>Akses Legal Indonesia — Sertifikasi HALAL & PIRT </title>
     <meta name="description"
         content="Layanan profesional untuk pengurusan Sertifikasi Halal, PIRT, dan BPOM. Proses cepat, aman, dan terdaftar resmi. Konsultasi gratis!" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="img/logo ALI.png" rel="icon">
+    <link href="img/logo ALI.png" rel="apple-touch-icon">
     <script>
         tailwind.config = {
             theme: {
@@ -1280,16 +1282,16 @@
 
                         <!-- Badge -->
                         <div class="absolute -bottom-6 right-1/2 md:right-6 translate-x-1/2 md:translate-x-0 
-                            bg-accent text-black rounded-xl p-4 shadow-lg">
+                            bg-accent text-white rounded-xl p-4 shadow-lg">
                             <div class="flex items-center gap-2">
-                                <svg class="w-8 h-8 text-black" fill="currentColor" viewBox="0 0 20 20">
+                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 20 20">
                                     <path
                                         d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
                                 </svg>
 
                                 <div>
-                                    <div class="text-2xl font-bold">200+</div>
-                                    <div class="text-sm">Sertifikasi Berhasil</div>
+                                    <div class="text-2xl font-bold text-white">200+</div>
+                                    <div class="text-sm text-white">Sertifikasi Berhasil</div>
                                 </div>
                             </div>
                         </div>
@@ -1349,16 +1351,16 @@
 
                         <!-- Badge -->
                         <div class="absolute -bottom-6 right-1/2 md:right-6 translate-x-1/2 md:translate-x-0 
-                            bg-accent text-black rounded-xl p-4 shadow-lg">
+                            bg-accent text-white rounded-xl p-4 shadow-lg">
                             <div class="flex items-center gap-2">
-                                <svg class="w-8 h-8 text-black" fill="currentColor" viewBox="0 0 20 20">
+                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 20 20">
                                     <path
                                         d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
                                 </svg>
 
                                 <div>
-                                    <div class="text-2xl font-bold">200+</div>
-                                    <div class="text-sm">Sertifikasi Berhasil</div>
+                                    <div class="text-2xl font-bold text-white">200+</div>
+                                    <div class="text-sm text-white">Sertifikasi Berhasil</div>
                                 </div>
                             </div>
                         </div>
